# PtyLab.py

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  demo.ipynb  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
.github/workflows/: format.yml  format_lint.yml  test.yml
PtyLab/Engines/: BaseEngine.py  OPR.py  aPIE.py  e3PIE.py  e3PIE_fixed.py  ePIE.py  ePIE_TV.py  mPIE.py  mPIE_tv.py  mqNewton.py  multiPIE.py  pcPIE.py  qNewton.py  zPIE.py
PtyLab/ExperimentalData/: ExperimentalData.py
PtyLab/Monitor/: Monitor.py  Plots.py
PtyLab/Operators/: Operators.py  _propagation_kernels.py
PtyLab/Params/: Params.py
PtyLab/Reconstruction/: Reconstruction.py
PtyLab/io/: readHdf5.py
PtyLab/utils/: alignment.py  cli.py  utils.py  visualisation.py
advanced/gpu/: index.html
advanced/multislice/: index.html
advanced/position-correction/: index.html
cpm/configuration/: index.html
cpm/data-format/: index.html
cpm/engines/: index.html
cpm/overview/: index.html
docs/: index.md
docs/advanced/: gpu.md
docs/getting-started/: installation.md
docs/stylesheets/: extra.css
fpm/overview/: index.html
jupyter_tutorials/: jupyter_tutorials_tutorial_CPM.ipynb  jupyter_tutorials_tutorial_CPM_multiWavelength.ipynb  jupyter_tutorials_tutorial_CPM_sim.ipynb  jupyter_tutorials_tutorial_FPM.ipynb  jupyter_tutorials_tutorial_LateralPositionCorrection.ipynb  jupyter_tutorials_tutorial_interferometricIntensityConstraint.ipynb  jupyter_tutorials_tutorial_reflectionPtychography.ipynb
search/: search_index.json
tests/: conftest.py
(+30 files in other folders)
